--- a/clock.html
+++ b/clock.html
@@ -8,21 +8,27 @@
 
 <body>
     <div class="container">
-        <div class="displayArea"></div>
-        <div class="hour">
-            <div class="center">
+        <div class="box">
+            <div id="mask" class="" style="display: none">
+                <img/>
             </div>
-        </div>
-        <div class="mins">
-            <div class="center">
+            <div class="displayArea"></div>
+            <div class="hour">
+                <div class="center">
+                </div>
             </div>
-        </div>
-        <div class="second">
-            <div class="center">
+            <div class="mins">
+                <div class="center">
+                </div>
+            </div>
+            <div class="second">
+                <div class="center">
+                </div>
             </div>
         </div>
     </div>
     <script src="myapp/jquery-1.11.3.js"></script>
+    <script src="myapp/jquery-ui.js"></script>
     <script src="myapp/respond.min.js"></script>
     <script src="myapp/clock.js"></script>
 </body>
